add local files.

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
-inventory        = ~/ansible-workshop/hosts
-log_path         = ~/ansible-workshop/ansible.log
+inventory        = ~/ansible-workshop-s2/hosts
+log_path         = ~/ansible-workshop-s2/ansible.log
 display_skipped_hosts = no
 
